--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,6 @@ button {
 }
 
 #hero_section {
-    position: absolute;
     width: 100%;
     height: 65%;
     background-repeat: no-repeat;
@@ -38,7 +37,8 @@ button {
         linear-gradient(360deg, #121212 0%, rgba(18, 18, 18, 0) 100%),
         url('../images/kids.webp');
     background-position: center center;
-    padding-top: 15%;
+    padding-top: 14%;
+    padding-bottom: 16%;
 
 }
 
@@ -60,4 +60,67 @@ button {
 
 #hero_section button {
     margin-top: 20px;
+}
+
+#donate_section {
+    padding-top: 80px;
+    padding-bottom: 80px;
+
+}
+
+#donate_section h2 {
+    font-size: 45px;
+    font-weight: 700;
+    line-height: 54.46px;
+    letter-spacing: 0px;
+    text-align: center;
+}
+
+#donate_section p {
+    font-size: 18px;
+    line-height: 28px;
+    text-align: center;
+    color: #707070;
+}
+
+.donation_amount {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.amount {
+    background-color: #FAFAFA;
+    padding: 20px 30px;
+    margin: 30px 10px;
+    color: #707070;
+
+}
+
+#default_selected_amount {
+    color: #FF5959;
+    border: 2px solid #FF5959;
+}
+
+.other_amount_field {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.other_amount_field input {
+    width: 700px;
+    padding: 20px 1px 20px 10px;
+    border: none;
+    font-size: 18px;
+    border-bottom: 1px solid #DADADA;
+}
+
+::-webkit-input-placeholder {
+    text-align: center;
+    color: #B3B3B3;
+}
+
+#donate_section button {
+    margin-top: 30px;
 }
