--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,21 @@ button {
     font-weight: 600;
 }
 
+h2 {
+    font-size: 45px;
+    font-weight: 700;
+    line-height: 54.46px;
+    letter-spacing: 0px;
+    text-align: center;
+}
+
+h3 {
+    font-size: 24px;
+    line-height: 36px;
+    color: #121212;
+    margin: 15px 0px;
+}
+
 #hero_section {
     width: 100%;
     height: 65%;
@@ -68,13 +83,6 @@ button {
 
 }
 
-#donate_section h2 {
-    font-size: 45px;
-    font-weight: 700;
-    line-height: 54.46px;
-    letter-spacing: 0px;
-    text-align: center;
-}
 
 #donate_section p {
     font-size: 18px;
@@ -123,4 +131,48 @@ button {
 
 #donate_section button {
     margin-top: 30px;
+}
+
+#donate_plan {
+    padding-top: 80px;
+    padding-bottom: 80px;
+
+}
+
+.donate_plan_sub_texts {
+    font-size: 18px;
+    line-height: 28px;
+    text-align: center;
+    color: #707070;
+    margin-bottom: 30px;
+}
+
+.donate_plan p {
+    font-size: 16px;
+    line-height: 24px;
+    color: #707070;
+}
+
+#plans {
+    display: flex;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+.donate_plans1 {
+    margin: 20px;
+    padding: 40px 20px;
+    background-color: #4F9DA61A;
+}
+
+.donate_plans2 {
+    margin: 20px;
+    padding: 40px 20px;
+    background-color: #FF59591A;
+}
+
+.donate_plans3 {
+    margin: 20px;
+    padding: 40px 20px;
+    background-color: #FFF4D6;
 }
