--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ h3 {
 
 .amount {
     background-color: #FAFAFA;
-    padding: 20px 30px;
+    padding: 10px 30px;
     margin: 30px 10px;
     color: #707070;
 
@@ -175,4 +175,16 @@ h3 {
     margin: 20px;
     padding: 40px 20px;
     background-color: #FFF4D6;
+}
+
+#brief_section1 {
+    margin: 50px 0px;
+}
+
+.brief_descriptions {
+    width: 50%;
+}
+
+.brief_descriptions h2 {
+    text-align: left;
 }
