--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Global Style CSS code started from here */
 * {
     margin: 0;
 }
@@ -43,6 +44,8 @@ h3 {
     margin: 15px 0px;
 }
 
+/* Global Style CSS code end from here */
+/* Hero Section CSS code started from here */
 #hero_section {
     width: 100%;
     height: 65%;
@@ -77,6 +80,7 @@ h3 {
     margin-top: 20px;
 }
 
+/* Donate Today section CSS code started from here */
 #donate_section {
     padding-top: 80px;
     padding-bottom: 80px;
@@ -129,6 +133,7 @@ h3 {
     color: #B3B3B3;
 }
 
+/* Our Donate Plan CSS code Started from Here */
 #donate_section button {
     margin-top: 30px;
 }
@@ -177,14 +182,81 @@ h3 {
     background-color: #FFF4D6;
 }
 
-#brief_section1 {
-    margin: 50px 0px;
+/* Gallery section CSS code Started From here */
+.gallery_descriptions p {
+    text-align: center;
+    margin-bottom: 30px;
 }
 
-.brief_descriptions {
-    width: 50%;
+.image_gallery {
+    display: flex;
+    padding-left: 20%;
+    padding-right: 20%;
 }
 
-.brief_descriptions h2 {
+.flood_image {
+    width: 33%;
+}
+
+.flood_image img {
+    width: 95%;
+    height: 250px;
+    margin-top: 15px;
+}
+
+.image_gallery2 {
+    display: flex;
+    padding-left: 20%;
+    padding-right: 20%;
+    margin-bottom: 50px;
+}
+
+/* Get my update section CSS code started from here */
+#get_my_update {
+    margin-top: 30px;
+    margin-bottom: 70px;
+}
+
+#get_my_update p {
+    text-align: center;
+    color: #707070;
+    margin-bottom: 30px;
+}
+
+.subscribe_form {
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+    width: 565px;
+    margin: auto;
+    background-color: #FFF4D6;
+    padding: 60px 90px 60px 130px;
+
+}
+
+#email {
+    font-size: 18px;
+    width: 400px;
+    border: 0;
+    background-color: #D9D9D9;
+    padding-left: 20px;
+}
+
+#email::-webkit-input-placeholder {
     text-align: left;
+}
+
+/* Footer section CSS started from here */
+#footer {
+    background-color: #0B0D17;
+    padding: 40px;
+}
+
+#footer h2 {
+    color: #FF5959;
+}
+
+#footer p {
+    color: #fff;
+    text-align: center;
 }
